# dockerfile-vs-bazel

./: .gitignore  CMakeLists.txt  Dockerfile  MODULE.bazel  README.md
apt/: BUILD.bazel  trixie.lock.json  trixie.yaml
libs/: BUILD.bazel  hello_time.cc  hello_time.h
srcs/: BUILD.bazel  hello_greet.cc  hello_greet.h  hello_world.cc
